--- a/main.html
+++ b/main.html
@@ -4,10 +4,76 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML Assignment 3</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align: center;">HTML Assignment #3</h1>
+	<table border="1" style="width:100%">
+		<tr>
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
+		</tr>
+		<tr class="center">
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
+		</tr>
+	</table>
+	<table border="1" style="width:100%; height:100px">
+		<tr>
+			<td id="t21" colspan="6"></td>
+		</tr>
+		<tr>
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td colspan="3" rowspan="2"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+	</table>
+	<table border="1" style="width:100%">
+		<tr style="background-color:green">
+			<td colspan="3"></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td id="t-image">
+				<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Img"/>
+			</td>
+			<td></td>
+		</tr>
+		<tr style="background-color:blue">
+			<td colspan="3"></td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
