--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1 style="text-align: center;">HTML Assignment #3</h1>
-	<table border="1" style="width:100%">
+	<table id="table-1" class="middle" border="1" style="width:100%">
 		<tr>
-			<td>left</td>
-			<td>center</td>
-			<td class="right">right</td>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13" class="right">right</td>
 		</tr>
 		<tr class="center">
 			<td>left</td>
@@ -27,7 +27,7 @@
 			<td class="right">right</td>
 		</tr>
 	</table>
-	<table border="1" style="width:100%; height:100px">
+	<table id="table-2" class="middle" border="1" style="width:100%; height:100px">
 		<tr>
 			<td id="t21" colspan="6"></td>
 		</tr>
@@ -59,7 +59,7 @@
 			<td colspan="6"></td>
 		</tr>
 	</table>
-	<table border="1" style="width:100%">
+	<table id="table-3" class="middle" border="1" style="width:100%">
 		<tr style="background-color:green">
 			<td colspan="3"></td>
 		</tr>
