--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	<table id="table-1" class="middle" border="1" style="width:100%">
 		<tr>
 			<td id="t11">left</td>
-			<td id="t12">center</td>
+			<td id="t12" class="center">center</td>
 			<td id="t13" class="right">right</td>
 		</tr>
 		<tr class="center">
